--- a/RoapTripPlannerApp/Platforms/Android/AndroidManifest.xml
+++ b/RoapTripPlannerApp/Platforms/Android/AndroidManifest.xml
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+		  package="com.example.roadtriplannerapp">
 	<application android:allowBackup="true" android:icon="@mipmap/appicon" 
 				 android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true">
 		<meta-data android:name="com.google.android.geo.API_KEY"
-				   android:value="AIzaSyBFe90X0HZRxE87Cj9DdSdVexktpo9N_Dg"/>
+				   android:value="AIzaSyCk1AIoeHdPs2yYVAg_H2IiECAyBwVSWtA"/>
 	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
