--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Install .NET MAUI
-      run: dotnet workload unstall maui
+      run: dotnet workload install maui
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
