--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,6 +25,6 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore RoapTripPlannerApp/RoapTripPlannerApp.csproj
     - name: Build
-      run: dotnet build RoapTripPlannerApp/RoapTripPlannerApp.csproj -c Realease -t net8.0-android --no-restore
+      run: dotnet build RoapTripPlannerApp/RoapTripPlannerApp.csproj -c Realease -f net8.0-android --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
