--- a/RoadTripPlannerApp/Platforms/iOS/Info.plist
+++ b/RoadTripPlannerApp/Platforms/iOS/Info.plist
@@ -29,6 +29,6 @@
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This apps ahows your location on a map</string>
+	<string>This apps shows your location on a map</string>
 </dict>
 </plist>
