--- a/RoadTripPlannerApp/Platforms/Android/AndroidManifest.xml
+++ b/RoadTripPlannerApp/Platforms/Android/AndroidManifest.xml
@@ -3,8 +3,8 @@
 		  package="com.example.roadtriplannerapp">
 	<application android:allowBackup="true" android:icon="@mipmap/appicon" 
 				 android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true">
-		<meta-data android:name="com.google.android.geo.API_KEY"
-				   android:value="${MAPS_API_KEY}"/>
+		<!--<meta-data android:name="com.google.android.geo.API_KEY"
+				   android:value="${MAPS_API_KEY}"/>-->
 	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
