--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,6 +28,10 @@ jobs:
     name: Build MAUI for Android and IOS
     needs: [setup]
     runs-on: windows-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
     strategy:
       matrix:
         dotnet-version: ['8.0.x']
@@ -66,7 +70,7 @@ jobs:
       with:
         languages: ${{ matrix.language }}
     - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
+      uses: github/codeql-action/autobuild@v3
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
       with:
