--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -69,8 +69,10 @@ jobs:
       uses: github/codeql-action/init@v3
       with:
         languages: ${{ matrix.language }}
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v3
+    #- name: Autobuild
+      #uses: github/codeql-action/autobuild@v3
+    - name: Build project
+      run: dotnet build
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
       with:
