--- a/RoadTripPlannerApp/RoadTripPlannerApp.csproj
+++ b/RoadTripPlannerApp/RoadTripPlannerApp.csproj
@@ -75,6 +75,7 @@
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.40" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Maui.Controls.Maps" Version="8.0.40" />
+		<PackageReference Include="Shiny.Xunit.Runners.Maui" Version="1.0.0" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
 	</ItemGroup>
 
