--- a/RoadTripPlannerAppTest/RoadTripPlannerAppTest.csproj
+++ b/RoadTripPlannerAppTest/RoadTripPlannerAppTest.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RoadTripPlannerApp\RoadTripPlannerApp.csproj" />
+	  <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.40" />
   </ItemGroup>
 
   <ItemGroup>
